--- a/笔记/进程之间是如何相互建立的.md
+++ b/笔记/进程之间是如何相互建立的.md
@@ -5,6 +5,10 @@
   当一个子进程结束运行时，并非马上就消失掉，而是留下一个称为僵尸进程的数据结构，等待父进程处理。
 ## 2.孤儿进程
     当前进程结束且父进程在他之前结束，这时子进程被“托孤”于init进程
+>在类UNIX操作系统中，为避免孤儿进程退出时无法释放所占用的资源而僵死，任何孤儿进程产生时都会立即为系统进程init或systemd自动接收为子进程，这一过程也被称为“收养”（英语：re-parenting）[1]。在此需注意，虽然事实上该进程已有init作为其父进程，但由于创建该进程的进程已不存在，所以仍应称之为“孤儿进程”。
+
+从维基百科查到，也就是创建进程结束之后，即使父进程是init，依然是孤儿进程
+https://zh.wikipedia.org/zh-hans/%E5%AD%A4%E5%84%BF%E8%BF%9B%E7%A8%8B
 ## 3.终端与终端中进程的关系
 在这里面31011是终端，而31049是终端里面的操作，可以看到，终端里面启动的操作是终端的子进程。
 ![21e5bfbc.png](:storage/af4f575e-3f09-4086-89f1-52563a3050a3/21e5bfbc.png)
